--- a/member-area.html
+++ b/member-area.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Kencana Store — Member Area (Simulasi Halaman)</title>
+    <title>Kencana Store — Member Area</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
