--- a/member-area.html
+++ b/member-area.html
@@ -151,7 +151,7 @@
                     </nav>
                 </aside>
 
-                <div class="lg:w-3/4 space-y-8" id="member-content-container">
+                <div class="lg:w-3/4" id="member-content-container">
 
                     <div id="dashboard" class="member-content-page active space-y-8">
                         <div class="card p-6">
