--- a/index.html
+++ b/index.html
@@ -305,6 +305,24 @@
           >
         </button>
 
+        <!-- buttton untuk dashboard jika di klik tab baru -->
+        
+        <a
+          target="_blank"
+          href="dashboard3.html" 
+          class="flex items-center gap-1 px-3 py-2 border rounded-full bg-white text-[color:var(--kencana-blue)] hover:bg-gray-100 transition duration-200"
+        >
+          <svg class="w-5 h-5" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M5.121 17.804A7 7 0 0112 15a7 7 0 016.879 2.804M15 11a3 3 0 10-6 0 3 3 0 006 0z"
+            />
+          </svg>
+          <span class="text-sm hidden sm:inline">Dashboard</span>
+        </a>
+
         <a
           href="login-otp.html"
           class="flex items-center gap-1 px-3 py-2 border rounded-full bg-white text-[color:var(--kencana-blue)] hover:bg-gray-100 transition duration-200"
